<resources>
    <string name="app_name">Tour Guide</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="category_monuments">Monuments</string>
    <string name="category_bridges">Bridges</string>
    <string name="category_museums">Museums</string>
    <string name="category_cathedrals_churches">Cathedrals</string>
    <string name="sights_spb_for_header">Sights of Saint-Petersburg</string>
    <string name="cath_text_alex_nev_0">Alexander Nevsky Lavra</string>
    <string name="cath_text_alex_nev_1">Saint Alexander Nevsky Monastery was founded by Peter I of Russia in 1710</string>
    <string name="cath_text_alex_nev_2">Saint Alexander Nevsky Lavra or Saint
        Alexander Nevsky Monastery was founded by Peter I of Russia in 1710 at the eastern end of
        the Nevsky Prospekt in Saint Petersburg supposing that that was the site of the Neva Battle
        in 1240 when Alexander Nevsky, a prince, defeated the Swedes; however, the battle actually
        took place about 12 miles (19 km) away from that site. "On April 5, 1713, in St. Petersburg, in the presence of Peter I, the wooden Church of the Annunciation was consecrated. This day is considered the official founding date of the Alexander Nevsky Lavra."
    </string>
    <string name="cath_text_isaac_0">Saint Isaac\'s Cathedral</string>
    <string name="cath_text_isaac_1">Is the largest Russian Orthodox cathedral (sobor) in the city.</string>
    <string name="cath_text_isaac_2">It is the largest orthodox basilica and the fourth largest (by the volume under the cupola)
        cathedral in the world. It is dedicated to Saint Isaac of Dalmatia, a patron saint
        of Peter the Great, who had been born on the feast day of that saint.</string>
    <string name="cath_text_kazan_0">Kazan Cathedral</string>
    <string name="cath_text_kazan_1">Is a cathedral of the Russian Orthodox Church</string>
    <string name="cath_text_kazan_2">Kazan Cathedral or Kazanskiy Kafedralniy Sobor, also known as the Cathedral of Our Lady of Kazan.
        It is dedicated to Our Lady of Kazan, probably the most venerated icon in Russia</string>
    <string name="cath_text_st_nicholas_0">Saint Nicholas Naval Cathedral</string>
    <string name="cath_text_st_nicholas_1">Is a major Baroque Orthodox cathedral in the western part of Central Saint Petersburg</string>
    <string name="cath_text_st_nicholas_2">It has always been closely associated with the Russian Navy, serving as its main shrine
        until the Russian Revolution. In the upper church there are numerous memorial plaques for the crews of the sunken
        Soviet submarines, including K-278 Komsomolets. The crew of the submarine K-141 Kursk has also been commemorated ther</string>
    <string name="cath_text_paul_0">Saints Peter and Paul Cathedral</string>
    <string name="cath_text_paul_1">It is the first and oldest landmark in St. Petersburg, built between 1712 and 1733 on Hare Island along the Neva River</string>
    <string name="cath_text_paul_2">Both the cathedral and the fortress were originally built under Peter the Great and designed by Domenico Trezzini.
        The cathedral\'s bell tower is the world\'s tallest Orthodox bell tower.Since the belfry is not standalone,
        but an integral part of the main building, the cathedral is sometimes considered the highest Orthodox Church in the world.
        There is another Cathedral of Saints Peter and Paul Church in St.
        Petersburg, located in Petergof.</string>
    <string name="cath_text_savior_0">Church of the Savior on Blood</string>
    <string name="cath_text_savior_1">This church was built on the site where Emperor Alexander II was fatally wounded by political nihilists in March 1881.</string>
    <string name="cath_text_savior_2">The Church of the Savior on Spilled Blood  is one of the main sights of Saint Petersburg,
        Russia. Other names include the Church on Spilled Blood , the Temple of the Savior on Spilled Blood , and the Cathedral of the Resurrection of Christ.</string>
    <string name="cath_text_trinity_0">Trinity Cathedral</string>
    <string name="cath_text_trinity_1">Sometimes called the Troitsky Cathedral, built between 1828 and 1835 to a design by Vasily Stasov.</string>
    <string name="cath_text_trinity_2">The cathedral, which can accommodate up to 3,000 visitors, has only recently begun to be restored to
        its pre-Revolutionary splendor after years of neglect. In honor of the victory in the Russo-Turkish War, 1877-1878,
        when the Russians liberated Bulgaria from the Ottoman domination, a memorial column was constructed in front of the
        northern facade of the cathedral in 1886. The cathedral became a part of the Saint Petersburg World Heritage Site in 1990.</string>
    <string name="cath_text_chesme_0">Chesme Church</string>
    <string name="cath_text_chesme_1">Is a small Russian Orthodox church, It was built by the Russian court architect Yury Felten in 1780</string>
    <string name="cath_text_chesme_2">At the direction of Catherine the Great, Empress of Russia. A memorial church, it was erected
        adjacent to the Chesme Palace (damaged during the Siege of Leningrad and restored in 1946) between Saint Petersburg and
        Tsarskoye Selo to commemorate the anniversary of Russia\'s 1770 victory over Turkish forces in Chesme Bay in the Aegean Sea
        during the Russo-Turkish War of 1768–1774.</string>
    <string name="bridges_text_anichkov_0">Anichkov Bridge</string>
    <string name="bridges_text_anichkov_1">Is the oldest and most famous bridge across the Fontanka River in Saint Petersburg.</string>
    <string name="bridges_text_anichkov_2">The current bridge, built in 1841-42 and reconstructed in 1906-08,
        combines a simple form with some spectacular decorations. As well as its four famous horse sculptures (1849–50),
        the bridge has some of the most celebrated ornate iron railings in Saint Petersburg.
        The structure is mentioned in the works of Pushkin, Gogol, and Dostoevsky.</string>
    <string name="bridges_text_bank_0">Bank Bridge</string>
    <string name="bridges_text_bank_1">Is a 25-m-long pedestrian bridge crossing the
        Griboedov Canal near the former Assignation Bank in Saint Petersburg.</string>
    <string name="bridges_text_bank_2">Like other bridges across the canal, the existing structure
        dates from 1826. The bridge engineer was Wilhelm von Traitteur, who conceived of a pedestrian separation
        structure suspended by cables. He was an engineer who also built other bridges over
        the Griboyedov Canal, Fontanka and Moika. The general management of the bridge construction
        was carried out by colonel E. A. Adam.</string>
    <string name="bridges_text_annunciation_0">Annunciation Bridge</string>
    <string name="bridges_text_annunciation_1">The Blagoveschensky (Annunciation) Bridge
        is the first permanent bridge built across the Neva River in Saint Petersburg.</string>
    <string name="bridges_text_annunciation_2">It connects Vasilievsky Island and the central
        part of the city (Admiralteysky raion). The bridge\'s length is 331 meters and the width was
        24 meters. The original name of the bridge was Nevsky Bridge. It was later renamed
        Blagoveshchensky Bridge. After the death of Tsar Nicholas I, it was named Nikolaevsky Bridge
        in his honor, and in 1918 it was renamed for Lieutenant Schmidt.</string>
    <string name="bridges_text_bolsheokhtinsky_0">Bolsheokhtinsky Bridge</string>
    <string name="bridges_text_bolsheokhtinsky_1">Is a bridge across the Neva River in Saint Petersburg.</string>
    <string name="bridges_text_bolsheokhtinsky_2">The bridge\'s length is 334 meters, the width is
        23 meters. The bridge features only three spans, the central one can be drawn.
        The initial idea to build a bridge near the Okhta river was circulated in 1829. Even before the Saint
        Petersburg was founded, there were settlements in the Okhta region, and with the
        growth of the city, it quickly grew to become big industrial center. Powder
        factories and shipyards existed here. However, in the 19th century, Okhta district
        wasn't officially part of Saint Petersburg. The bridge was essential for the developing
        industry, and Nicholas I approved the bridge as part of strategic city development plan</string>
    <string name="bridges_text_obukhovsky_0">Bolshoy Obukhovsky Bridge</string>
    <string name="bridges_text_obukhovsky_1">Is the newest bridge across the Neva
        River in Saint Petersburg. </string>
    <string name="bridges_text_obukhovsky_2">It is also the only bridge across the Neva which is
        not a drawbridge. It is located in Nevsky District, in the middle stream of the Neva.
        It connects Obukhovskaya Oborona Prospekt with Oktyabrskaya Embankment.
        It is a cable-stayed bridge; the steel wire ropes are the key element of supporting construction.</string>
    <string name="bridges_text_palace_0">Palace Bridge</string>
    <string name="bridges_text_palace_1">Palace Bridge, a road- and foot-traffic bascule bridge,
        spans the Neva River in Saint Petersburg between Palace Square and Vasilievsky Island.</string>
    <string name="monuments_text_horseman_0">Bronze Horseman.</string>
    <string name="monuments_text_horseman_1">The Bronze Horseman is an equestrian statue of Peter the
        Great in the Senate Square in Saint Petersburg.</string>
    <string name="monuments_text_horseman_2">Commissioned by Catherine the Great, it was created by the
        French sculptor Étienne Maurice Falconet. The name comes from an 1833 poem of the same name
        by Aleksander Pushkin, which is widely considered one of the most significant works of
        Russian literature. The statue is now one of the symbols of Saint Petersburg.
        Poem The Bronze Horseman is the title of a poem written by Aleksandr Pushkin in 1833,
        widely considered to be one of the most significant works of Russian literature.
        Due to the popularity of his work, the statue came to be called the "Bronze Horseman".
        A major theme of the poem is conflict between the needs of the state and the
        needs of ordinary citizens</string>
    <string name="monuments_text_alex_column_0">Alexander Column</string>
    <string name="monuments_text_alex_column_1">Column The Alexander also known as Alexandrian Column,
        is the focal point of Palace Square in Saint Petersburg.</string>
    <string name="monuments_text_alex_column_2">The monument was raised after the Russian victory
        in the war with Napoleon\'s France. The column is named for Emperor Alexander I of Russia,
        who reigned from 1801–25.The Alexander Column was designed by the French-born architect
        Auguste de Montferrand, built between 1830 and 1834 with Swiss-born architect Antonio Adamini,
        and unveiled on 30 August 1834. The monument is claimed to be the tallest of its kind in
        the world at 47.5 m (155 ft 8 in) tall and is topped with a statue of an angel holding a
        cross, as a triumphal column it may be the highest but the Monument to the Great Fire of
        London is a freestanding column 62 m high. As a monolith that has been quarried, moved and
        erected it is the heaviest recorded. The statue of the angel was designed by the Russian
        sculptor Boris Orlovsky. The face of the angel bears great similarity to the face
        of Emperor Alexander.</string>
    <string name="welcome_to_spb">Welcome to Saint-Petersburg, Russia!</string>
    <string name="welcome_to_spb_2">Our guide will help you to sort out a little of the great variety of sights of St. Petersburg!</string>
</resources>