<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_looks_one"
            android:title="@string/category_cathedrals_churches" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_looks_two"
            android:title="@string/category_museums" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_looks_3"
            android:title="@string/category_bridges" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_looks_4"
            android:title="@string/category_monuments" />
    </group>
</menu>