<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/bridges_text_anichkov_0"
            android:scaleType="centerCrop"
            android:src="@drawable/monuments_0_img_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:text="@string/welcome_to_spb"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_include_list_view"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:text="@string/welcome_to_spb_2"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_include_list_view_2"
            android:textStyle="italic" />

    </LinearLayout>

</ScrollView>