<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/monuments_text_alex_column_0"
            android:src="@drawable/monuments_1_img_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:text="@string/monuments_text_alex_column_0"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:text="@string/monuments_text_alex_column_1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:text="@string/monuments_text_alex_column_2"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/monuments_text_alex_column_0"
            android:scaleType="centerCrop"
            android:src="@drawable/monuments_1_img_2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/monuments_text_alex_column_0"
            android:scaleType="centerCrop"
            android:src="@drawable/monuments_1_img_3" />

    </LinearLayout>

</ScrollView>