<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:scaleType="centerCrop"
            tools:src="@drawable/monuments_0_img_1" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/monuments_text_horseman_0" />

        <TextView
            android:id="@+id/text_view_description_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            tools:text="@string/monuments_text_horseman_1" />

        <TextView
            android:id="@+id/text_view_description_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            tools:text="@string/monuments_text_horseman_2" />

        <ImageView
            android:id="@+id/image_view_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:scaleType="centerCrop"
            tools:src="@drawable/monuments_0_img_2" />

        <ImageView
            android:id="@+id/image_view_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:scaleType="centerCrop"
            tools:src="@drawable/monuments_0_img_3" />

    </LinearLayout>
</ScrollView>